# bw-web-api-rs

./: API Documentation.md  Cargo.toml  DOCUMENTATION.md  LICENSE  README.md
src/: api.rs  client.rs  error.rs  lib.rs
src/response_types/v1/: classic_files_global_maps_1v1.rs  gateway.rs  leaderboard.rs  leaderboard_entity.rs  leaderboard_name_search.rs  leaderboard_rank_by_toon.rs  map_stats_by_toon.rs  matchmaker_gameinfo_playerinfo.rs  mod.rs
src/response_types/v2/: aurora_profile_by_toon_scr_mm_game_loading.rs  aurora_profile_by_toon_scr_mm_toon_info.rs  aurora_profile_by_toon_scr_profile.rs  aurora_profile_by_toon_scr_toon_info.rs  aurora_profile_by_toon_superset.rs  common.rs  mod.rs
